Restructuring Part1
Ho notato che la struttura base dei db era poco intelligente e non mirata al dev futuro, quindi sto preparando una cosa più organica, che funziona con i puntatori e mi permette di evitare di aggiornare ogni singolo DB a mano quando scrivo un messaggio o faccio un cambiamento che deve essere sincronizzato tra le varie liste. :)
