# doc/api.yaml
@@ -2,9 +2,9 @@ openapi: 3.0.0
 
 info:
   title: WASAText
-  version: 1.0.2
-  description: Project made by 2087354. In questa versione ho aggiunto tutti le description possibili e ho sistemato un incongruenza tra le operazioni e la loro interazione con conversazioni private/tra gruppi. Inoltre ho aggiunto delle ottimizzazioni con i component e reference e separato gli ID dagli utenti e altri elementi che lo hanno (messaggi, conversazioni ecc.).
-  
+  version: 1.0.5
+  description: Project made by 2087354. In questa versione ho adattato l'API a seconda del codice Go.
+
   contact:
     name: Sasha
     url: https://www.youtube.com/watch?v=dQw4w9WgXcQ
@@ -18,28 +18,14 @@ components:
         scheme: bearer
   
   schemas:
-    # MessagePreviewXORPhoto:
-    #   description: Preview of the last message or a photo icon if the last message is a photo.
-    #   type: object
-    #   oneOf:
-    #     - properties:
-    #         MessagePreview:
-    #           description: Snippet of the last text message.
-    #           type: string
-    #           example: "ao ma che fai"
-    #     - properties:
-    #         PhotoIcon:
-    #           description: Icon indicating the last message is a photo.
-    #           type: string
-    #           enum: ["📷 Photo"]
-    #           example: "📷 Photo"
-  
+
     SendMessageRequest:
       type: object
       properties:
         recipientUsername:
           type: string
           description: Username del destinatario diretto. Ignorato se viene fornito un ID di conversazione.
+          example: Ciccione
         message:
           $ref: "#/components/schemas/Message"
       required:
@@ -49,18 +35,18 @@ components:
       description: A binary file that represent the image.
       type: string
       format: binary
+      example: /9j/4AAQ
       
-    UserID: #CAN be changed! (unlike generic id)
+    UserID: 
       description: Unique identifier/name of a user. Also called Username/Author.
       type: string
-      example: "DajeRoma69"
-      readOnly: false
+      example: "Ciccione"
+
       
     GenericID:
-      description: A universal multipurpose unique identifier.
+      description: A universal multipurpose unique identifier. Should be autogenerated by back-end.
       type: string
-      example: "r4nd0mt3xtl0lth4tsh0u1db34n1d"
-      readOnly: true
+      example: "genID"
       
     User:
       description: A resource representing a user.
@@ -81,9 +67,10 @@ components:
           description: Timestamp of the message
           type: string
           format: time-stamp
+          example: 2025-01-06T12:00:00Z
 
         Content:
-          description: The content of the message, could contain plain text, photo, or both.
+          description: The content of the message, could contain plain text, photo, or both, or none...
           type: object
           properties:
             Photo:
@@ -92,18 +79,20 @@ components:
             Text:
               description: Textual content of the message
               type: string
+              example: Ciao! Ti volevo chiedere se mi presti 10$
           required: []  # Indica che Photo e Text sono opzionali
-        ID:
-          description: Unique identifier for the message
+        MsgID:
+          description: Unique identifier for the message. Should be autogenerated by the system.
           $ref: "#/components/schemas/GenericID"
+          required: false 
         Author:
           description: Reference to the UserID of the user who sent the message.
           $ref: "#/components/schemas/UserID"
         Status:
           description: An ENUM representing the checkmarks/status of the message.
           type: string 
-          enum: ['recieved', 'seen']
-          example: 'seen'
+          enum: ['recieved', 'seen','delivered']
+          example: 'delivered'
           # TODO setStatus i guess?
         Reactions:
           description: A collection of Reaction(s)
@@ -115,32 +104,37 @@ components:
     Reaction:
       type: object
       properties:
-        ID:
-          description: Unique identifier for the reación
-          $ref: "#/components/schemas/GenericID"
         Author: 
           description: Reference to the author's identifier.
           $ref: "#/components/schemas/UserID" 
+        Timestamp:
+          description: Timestamp of the reaction
+          type: string
+          format: time-stamp
+          example: 2025-01-06T12:00:00Z
         Emoticon:
           description: An emoticon symbol representing the reaction.
           type: string
           maxLength: 1
           example: 🍆
+
           
     ConversationELT:
       description: This is a resource representing a conversation (collection of messages) that will apear in the conversations list. 
       type: object
       properties:
-        ID:
+        ConvoID:
           description: Unique ID of the conversation.
           $ref: "#/components/schemas/GenericID"
         DateLastMessage:
           description: Timestamp of the last message
           type: string
           format: time-stamp
+          example: 2025-01-06T12:00:00Z
         Preview:
-            description: The preview of the last message/photo
-            $ref: '#/components/schemas/MessagePreviewXORPhoto'
+            description: Preview dell'ultimo messaggio. ["📷 Photo" se foto, "📷 TestoPreview..." se foto e testo, "TestoPreview..." se solo testo]
+            type: string
+            example: "Ciao, ti volevo chiedere se..."
         Messages:
           description: A collection of messages
           #Sorted in reverse chrono order? TODO (i dont know how to implement it and i will think about it later.)
@@ -195,6 +189,22 @@ components:
 
 
 paths:
+
+  /admin/listUsers:
+    description: List All Existing Users.
+
+    get:
+      responses:
+        200:
+          description: Existing Usernames list
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/User"
+        404:
+          description: Users not found 
   
   /login:
     description: Login/Authentication path
